tests/codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.set.lvalue/rt_codegen_err_set_lvalue.mon
;; TEST-ID: tests.codegen.rt-codegen-err-set-lvalue
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-CODEGEN-ATOM: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.set.lvalue
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: compile-fail
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.codegen-diagnostics
;; TEST-PURPOSE: Codegen rejects mutation targets that are not lvalues.
;; TEST-ATOM: (set! 1 2) must fail because a number literal is not assignable.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:90-diagnostics/compile-fail branch family
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.set.lvalue
;; TEST-MENU-PATH: codegen/errors/codegen/compile-fail/atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.set.lvalue
;; TEST-ATOM-LEAF: atom.codegen.90.diagnostics.compile.fail.rt.codegen.err.set.lvalue
;; TEST-CLI-TARGET: codegen errors codegen compile-fail
(module Main)
(set! 1 2)
